Bug 344808 (Canceling a [download whose link tries to open a new window] causes current tab to close, when browser.link.open_newwindow is 1)  This fix does not mark the window returned by Open as new, if it is the same as the original window. r=cbiesinger,sr=darin